# PCRC

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  server-upload.py
doc/: main.tex
doc/figures/: PCRC.drawio
include/: log.h
include/crc/: crc-utils.h  generator.h
include/crc/crc-bitwise/: crc16-bitwise.h  crc32-bitwise.h  crc64-bitwise.h  crc8-bitwise.h
include/crc/crc-bytewise/: crc16-bytewise.h  crc32-bytewise.h  crc64-bytewise.h  crc8-bytewise.h
include/device/examples/: matrix-multiplication.cuh
include/device/pcrc/: pcrc-common.cuh  pcrc16.cuh  pcrc32.cuh  pcrc8.cuh
include/mod2-arithmetic/: mod2.h  mul2.h
include/parco/: CheckError.cuh  CheckError.i.cuh
include/util/: compare-run.cuh
slide/: main.tex
slide/figures/: EDT.drawio  PCRC.drawio
spec/: defconfig-157.27.80.243.ini  defconfig.ini
src/: main.cu
src/crc/: crc-utils.c
src/crc/crc-bitwise/: crc16-bitwise.c  crc32-bitwise.c  crc64-bitwise.c  crc8-bitwise.c
src/crc/crc-bytewise/: crc16-bytewise.c  crc32-bytewise.c  crc64-bytewise.c  crc8-bytewise.c
src/device/examples/: matrix-multiplication.cu
src/device/pcrc/: pcrc16.cu  pcrc32.cu  pcrc8.cu
src/mod2-arithmetic/: mod2.c  mul2.c
src/util/: compare-run.cu
test/include/: test-crc-bitwise.h  test-crc-bytewise.h  test-mod2-arithmetic.h  test-utils.h
test/src/: test-crc-bitwise.c  test-crc-bytewise.c  test-mod2-arithmetic.c  test-utils.c  test.c
